fixing the edit blog, fix alignment, add icons

--- a/src/app/blog/view-blog/view-blog.component.css
+++ b/src/app/blog/view-blog/view-blog.component.css
@@ -27,4 +27,10 @@
     min-height: 100%;
     overflow-y: auto;
 }
+
+.view-heading{
+  display: flex;
+  justify-content: space-between;
+
+}
   
